<resources>
    <string name="app_name">≠Equal</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_createwallet">CreateWallet</string>
    <string name="title_activity_wallet">Wallet</string>
    <string name="newwallet">New Wallet</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="notRegisteredYet">Not registered yet ?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="mainTitle">≠EQUAL</string>
    <string name="goBack">Back</string>
    <string name="passwordNotEnoughStrong">Password not enough strong</string>
    <string name="allFieldAreRequired">All fields are required</string>
    <string name="confirmAndPasswordError">Password and confirm password must be the same</string>
    <string name="mailAddressFormatError">Mail address format is not valid</string>
    <string name="accountCreatedConfirmation">Account created, check your mails to confirm</string>
    <string name="weak">Weak</string>
    <string name="medium">Medium</string>
    <string name="strong">Strong</string>
    <string name="veryStrong">Very Strong</string>
    <string name="WalletName">Wallet Name</string>
    <string name="WalletDescription">Wallet Description</string>
    <string name="WalletInformations">Wallet Informations</string>
    <string name="Members">Members</string>
    <string name="Me">It\'s me :</string>
    <string name="Done">Done</string>
    <string name="Name">Name</string>
    <string name="Edit">Edit</string>
    <string name="Cancel">Cancel</string>
    <string name="Share">Share</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="History">History</string>
    <string name="More">More</string>
    <string name="Approve">Approve</string>
    <string name="Decline">Decline</string>
    <string name="MemberName">Member name</string>
    <string name="errorPercentage">The percentage is between 0 or 100</string>
    <string name="errorAmount">You need to enter an amount for the flux</string>
    <string name="headerParticipation">Member Participations</string>
    <string name="headerInvolvements">Member Involvements</string>
    <string name="headerInformations">Flux informations</string>
    <string name="newFlux">New Flux</string>
    <string name="fluxName">Name</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="amount">Amount</string>
    <string name="symbolPercentage">%</string>
</resources>
